feat: refine mixed database views
- implement unified personal/public tab views with modal-based selection flows
- split screen, query, menu, and service helpers to satisfy file line limits
- update payloads, persistence, translations, and tests for scoped multi-view behavior

Co-Authored-By: GPT-5 Codex <gpt-5-codex@openai.com>